docs/1.130/secretmanager/v1beta1/secretManagerSecret.md
---
permalink: /1.130/secretmanager/v1beta1/secretManagerSecret/
---

# secretmanager.v1beta1.secretManagerSecret

"SecretManagerSecret is the Schema for the SecretManagerSecret API"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withAnnotations(annotations)`](#fn-specwithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-specwithannotationsmixin)
  * [`fn withExpireTime(expireTime)`](#fn-specwithexpiretime)
  * [`fn withResourceID(resourceID)`](#fn-specwithresourceid)
  * [`fn withTopics(topics)`](#fn-specwithtopics)
  * [`fn withTopicsMixin(topics)`](#fn-specwithtopicsmixin)
  * [`fn withTtl(ttl)`](#fn-specwithttl)
  * [`fn withVersionAliases(versionAliases)`](#fn-specwithversionaliases)
  * [`fn withVersionAliasesMixin(versionAliases)`](#fn-specwithversionaliasesmixin)
  * [`obj spec.replication`](#obj-specreplication)
    * [`fn withAutomatic(automatic)`](#fn-specreplicationwithautomatic)
    * [`obj spec.replication.auto`](#obj-specreplicationauto)
      * [`obj spec.replication.auto.customerManagedEncryption`](#obj-specreplicationautocustomermanagedencryption)
        * [`obj spec.replication.auto.customerManagedEncryption.kmsKeyRef`](#obj-specreplicationautocustomermanagedencryptionkmskeyref)
          * [`fn withExternal(external)`](#fn-specreplicationautocustomermanagedencryptionkmskeyrefwithexternal)
          * [`fn withName(name)`](#fn-specreplicationautocustomermanagedencryptionkmskeyrefwithname)
          * [`fn withNamespace(namespace)`](#fn-specreplicationautocustomermanagedencryptionkmskeyrefwithnamespace)
    * [`obj spec.replication.userManaged`](#obj-specreplicationusermanaged)
      * [`fn withReplicas(replicas)`](#fn-specreplicationusermanagedwithreplicas)
      * [`fn withReplicasMixin(replicas)`](#fn-specreplicationusermanagedwithreplicasmixin)
      * [`obj spec.replication.userManaged.replicas`](#obj-specreplicationusermanagedreplicas)
        * [`fn withLocation(location)`](#fn-specreplicationusermanagedreplicaswithlocation)
        * [`obj spec.replication.userManaged.replicas.customerManagedEncryption`](#obj-specreplicationusermanagedreplicascustomermanagedencryption)
          * [`obj spec.replication.userManaged.replicas.customerManagedEncryption.kmsKeyRef`](#obj-specreplicationusermanagedreplicascustomermanagedencryptionkmskeyref)
            * [`fn withExternal(external)`](#fn-specreplicationusermanagedreplicascustomermanagedencryptionkmskeyrefwithexternal)
            * [`fn withName(name)`](#fn-specreplicationusermanagedreplicascustomermanagedencryptionkmskeyrefwithname)
            * [`fn withNamespace(namespace)`](#fn-specreplicationusermanagedreplicascustomermanagedencryptionkmskeyrefwithnamespace)
  * [`obj spec.rotation`](#obj-specrotation)
    * [`fn withNextRotationTime(nextRotationTime)`](#fn-specrotationwithnextrotationtime)
    * [`fn withRotationPeriod(rotationPeriod)`](#fn-specrotationwithrotationperiod)
  * [`obj spec.topics`](#obj-spectopics)
    * [`obj spec.topics.topicRef`](#obj-spectopicstopicref)
      * [`fn withExternal(external)`](#fn-spectopicstopicrefwithexternal)
      * [`fn withName(name)`](#fn-spectopicstopicrefwithname)
      * [`fn withNamespace(namespace)`](#fn-spectopicstopicrefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of SecretManagerSecret

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"SecretManagerSecretSpec defines the desired state of SecretManagerSecret"

### fn spec.withAnnotations

```ts
withAnnotations(annotations)
```

"Optional. Custom metadata about the secret.\n\n Annotations are distinct from various forms of labels.\n Annotations exist to allow client tools to store their own state\n information without requiring a database.\n\n Annotation keys must be between 1 and 63 characters long, have a UTF-8\n encoding of maximum 128 bytes, begin and end with an alphanumeric character\n ([a-z0-9A-Z]), and may have dashes (-), underscores (_), dots (.), and\n alphanumerics in between these symbols.\n\n The total size of annotation keys and values must be less than 16KiB."

### fn spec.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Optional. Custom metadata about the secret.\n\n Annotations are distinct from various forms of labels.\n Annotations exist to allow client tools to store their own state\n information without requiring a database.\n\n Annotation keys must be between 1 and 63 characters long, have a UTF-8\n encoding of maximum 128 bytes, begin and end with an alphanumeric character\n ([a-z0-9A-Z]), and may have dashes (-), underscores (_), dots (.), and\n alphanumerics in between these symbols.\n\n The total size of annotation keys and values must be less than 16KiB."

**Note:** This function appends passed data to existing values

### fn spec.withExpireTime

```ts
withExpireTime(expireTime)
```

"Optional. Timestamp in UTC when the [Secret][google.cloud.secretmanager.v1.Secret] is scheduled to expire. This is always provided on output, regardless of what was sent on input."

### fn spec.withResourceID

```ts
withResourceID(resourceID)
```

"Immutable. The SecretManagerSecret name. If not given, the metadata.name will be used."

### fn spec.withTopics

```ts
withTopics(topics)
```

"Optional. A list of up to 10 Pub/Sub topics to which messages are published when control plane operations are called on the secret or its versions."

### fn spec.withTopicsMixin

```ts
withTopicsMixin(topics)
```

"Optional. A list of up to 10 Pub/Sub topics to which messages are published when control plane operations are called on the secret or its versions."

**Note:** This function appends passed data to existing values

### fn spec.withTtl

```ts
withTtl(ttl)
```

"Input only. The TTL for the [Secret][google.cloud.secretmanager.v1.Secret]."

### fn spec.withVersionAliases

```ts
withVersionAliases(versionAliases)
```

"Optional. Mapping from version alias to version name.\n\n A version alias is a string with a maximum length of 63 characters and can\n contain uppercase and lowercase letters, numerals, and the hyphen (`-`)\n and underscore ('_') characters. An alias string must start with a\n letter and cannot be the string 'latest' or 'NEW'.\n No more than 50 aliases can be assigned to a given secret.\n\n Version-Alias pairs will be viewable via GetSecret and modifiable via\n UpdateSecret. Access by alias is only be supported on\n GetSecretVersion and AccessSecretVersion."

### fn spec.withVersionAliasesMixin

```ts
withVersionAliasesMixin(versionAliases)
```

"Optional. Mapping from version alias to version name.\n\n A version alias is a string with a maximum length of 63 characters and can\n contain uppercase and lowercase letters, numerals, and the hyphen (`-`)\n and underscore ('_') characters. An alias string must start with a\n letter and cannot be the string 'latest' or 'NEW'.\n No more than 50 aliases can be assigned to a given secret.\n\n Version-Alias pairs will be viewable via GetSecret and modifiable via\n UpdateSecret. Access by alias is only be supported on\n GetSecretVersion and AccessSecretVersion."

**Note:** This function appends passed data to existing values

## obj spec.replication

"Optional. Immutable. The replication policy of the secret data attached to\n the [Secret][google.cloud.secretmanager.v1.Secret].\n\n The replication policy cannot be changed after the Secret has been created."

### fn spec.replication.withAutomatic

```ts
withAutomatic(automatic)
```

"The Secret will automatically be replicated without any restrictions."

## obj spec.replication.auto

"The [Secret][google.cloud.secretmanager.v1.Secret] will automatically be replicated without any restrictions."

## obj spec.replication.auto.customerManagedEncryption

"Optional. The customer-managed encryption configuration of the\n [Secret][google.cloud.secretmanager.v1.Secret]. If no configuration is\n provided, Google-managed default encryption is used.\n\n Updates to the [Secret][google.cloud.secretmanager.v1.Secret] encryption\n configuration only apply to\n [SecretVersions][google.cloud.secretmanager.v1.SecretVersion] added\n afterwards. They do not apply retroactively to existing\n [SecretVersions][google.cloud.secretmanager.v1.SecretVersion]."

## obj spec.replication.auto.customerManagedEncryption.kmsKeyRef

"Required. The resource name of the Cloud KMS CryptoKey used to encrypt\n secret payloads.\n\n For secrets using the\n [UserManaged][google.cloud.secretmanager.v1.Replication.UserManaged]\n replication policy type, Cloud KMS CryptoKeys must reside in the same\n location as the [replica location][Secret.UserManaged.Replica.location].\n\n For secrets using the\n [Automatic][google.cloud.secretmanager.v1.Replication.Automatic]\n replication policy type, Cloud KMS CryptoKeys must reside in `global`.\n\n The expected format is `projects/*/locations/*/keyRings/*/cryptoKeys/*`."

### fn spec.replication.auto.customerManagedEncryption.kmsKeyRef.withExternal

```ts
withExternal(external)
```

"A reference to an externally managed KMSCryptoKey. Should be in the format `projects/[kms_project_id]/locations/[region]/keyRings/[key_ring_id]/cryptoKeys/[key]`."

### fn spec.replication.auto.customerManagedEncryption.kmsKeyRef.withName

```ts
withName(name)
```

"The `name` of a `KMSCryptoKey` resource."

### fn spec.replication.auto.customerManagedEncryption.kmsKeyRef.withNamespace

```ts
withNamespace(namespace)
```

"The `namespace` of a `KMSCryptoKey` resource."

## obj spec.replication.userManaged

"The [Secret][google.cloud.secretmanager.v1.Secret] will only be replicated into the locations specified."

### fn spec.replication.userManaged.withReplicas

```ts
withReplicas(replicas)
```

"Required. The list of Replicas for this\n [Secret][google.cloud.secretmanager.v1.Secret].\n\n Cannot be empty."

### fn spec.replication.userManaged.withReplicasMixin

```ts
withReplicasMixin(replicas)
```

"Required. The list of Replicas for this\n [Secret][google.cloud.secretmanager.v1.Secret].\n\n Cannot be empty."

**Note:** This function appends passed data to existing values

## obj spec.replication.userManaged.replicas

"Required. The list of Replicas for this\n [Secret][google.cloud.secretmanager.v1.Secret].\n\n Cannot be empty."

### fn spec.replication.userManaged.replicas.withLocation

```ts
withLocation(location)
```

"The canonical IDs of the location to replicate data. For example: `\"us-east1\"`."

## obj spec.replication.userManaged.replicas.customerManagedEncryption

"Optional. The customer-managed encryption configuration of the\n [User-Managed Replica][Replication.UserManaged.Replica]. If no\n configuration is provided, Google-managed default encryption is used.\n\n Updates to the [Secret][google.cloud.secretmanager.v1.Secret]\n encryption configuration only apply to\n [SecretVersions][google.cloud.secretmanager.v1.SecretVersion] added\n afterwards. They do not apply retroactively to existing\n [SecretVersions][google.cloud.secretmanager.v1.SecretVersion]."

## obj spec.replication.userManaged.replicas.customerManagedEncryption.kmsKeyRef

"Required. The resource name of the Cloud KMS CryptoKey used to encrypt\n secret payloads.\n\n For secrets using the\n [UserManaged][google.cloud.secretmanager.v1.Replication.UserManaged]\n replication policy type, Cloud KMS CryptoKeys must reside in the same\n location as the [replica location][Secret.UserManaged.Replica.location].\n\n For secrets using the\n [Automatic][google.cloud.secretmanager.v1.Replication.Automatic]\n replication policy type, Cloud KMS CryptoKeys must reside in `global`.\n\n The expected format is `projects/*/locations/*/keyRings/*/cryptoKeys/*`."

### fn spec.replication.userManaged.replicas.customerManagedEncryption.kmsKeyRef.withExternal

```ts
withExternal(external)
```

"A reference to an externally managed KMSCryptoKey. Should be in the format `projects/[kms_project_id]/locations/[region]/keyRings/[key_ring_id]/cryptoKeys/[key]`."

### fn spec.replication.userManaged.replicas.customerManagedEncryption.kmsKeyRef.withName

```ts
withName(name)
```

"The `name` of a `KMSCryptoKey` resource."

### fn spec.replication.userManaged.replicas.customerManagedEncryption.kmsKeyRef.withNamespace

```ts
withNamespace(namespace)
```

"The `namespace` of a `KMSCryptoKey` resource."

## obj spec.rotation

"Optional. Rotation policy attached to the [Secret][google.cloud.secretmanager.v1.Secret]. May be excluded if there is no rotation policy."

### fn spec.rotation.withNextRotationTime

```ts
withNextRotationTime(nextRotationTime)
```

"Optional. Timestamp in UTC at which the\n [Secret][google.cloud.secretmanager.v1.Secret] is scheduled to rotate.\n Cannot be set to less than 300s (5 min) in the future and at most\n 3153600000s (100 years).\n\n [next_rotation_time][google.cloud.secretmanager.v1.Rotation.next_rotation_time]\n MUST  be set if\n [rotation_period][google.cloud.secretmanager.v1.Rotation.rotation_period]\n is set."

### fn spec.rotation.withRotationPeriod

```ts
withRotationPeriod(rotationPeriod)
```

"Input only. The Duration between rotation notifications. Must be in seconds\n and at least 3600s (1h) and at most 3153600000s (100 years).\n\n If\n [rotation_period][google.cloud.secretmanager.v1.Rotation.rotation_period]\n is set,\n [next_rotation_time][google.cloud.secretmanager.v1.Rotation.next_rotation_time]\n must be set.\n [next_rotation_time][google.cloud.secretmanager.v1.Rotation.next_rotation_time]\n will be advanced by this period when the service automatically sends\n rotation notifications."

## obj spec.topics

"Optional. A list of up to 10 Pub/Sub topics to which messages are published when control plane operations are called on the secret or its versions."

## obj spec.topics.topicRef



### fn spec.topics.topicRef.withExternal

```ts
withExternal(external)
```

"If provided must be in the format `projects/[project_id]/topics/[topic_id]`."

### fn spec.topics.topicRef.withName

```ts
withName(name)
```

"The `metadata.name` field of a `PubSubTopic` resource."

### fn spec.topics.topicRef.withNamespace

```ts
withNamespace(namespace)
```

"The `metadata.namespace` field of a `PubSubTopic` resource."